update: change name

--- a/DoAn_Nhom3/LibraryManagement/Views/DanhMuc/Details.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/DanhMuc/Details.cshtml
@@ -60,8 +60,8 @@
                                 <td class="text-end">@b.SoLuong</td>
                                 <td class="text-end">@b.AvailableCopies</td>
                                 <td class="text-end">
-                                    <a asp-controller="Sachs" asp-action="Details" asp-route-id="@b.MaSach" class="btn btn-sm btn-outline-primary">Chi tiết</a>
-                                    <a asp-controller="Sachs" asp-action="Edit" asp-route-id="@b.MaSach" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
+                                    <a asp-controller="Sach" asp-action="Details" asp-route-id="@b.MaSach" class="btn btn-sm btn-outline-primary">Chi tiết</a>
+                                    <a asp-controller="Sach" asp-action="Edit" asp-route-id="@b.MaSach" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
                                 </td>
                             </tr>
                         }
