--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuon/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuon/Create.cshtml
@@ -69,7 +69,7 @@
                 <div class="input-group">
                     <input name="q" value="@bookSearchQ" class="form-control" placeholder="Gõ tên sách hoặc ISBN..." />
                     <button type="submit" class="btn btn-outline-primary">Search</button>
-                    <a class="btn btn-outline-secondary" href="@Url.Action("Create","PhieuMuons")">Reset</a>
+                    <a class="btn btn-outline-secondary" href="@Url.Action("Create","PhieuMuon")">Reset</a>
                 </div>
             </div>
         </form>
