--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
@@ -30,7 +30,7 @@
             </h6>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="Sachs" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="Sach" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#file-earmark"></use>
                         </svg>
@@ -38,7 +38,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="CuonSachs" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="CuonSach" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#cart"></use>
                         </svg>
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="DanhMucs" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="DanhMuc" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#people"></use>
                         </svg>
@@ -54,7 +54,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="TacGias" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="TacGia" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#graph-up"></use>
                         </svg>
@@ -67,7 +67,7 @@
             </h6>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="NguoiMuons" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="NguoiMuon" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#file-earmark"></use>
                         </svg>
@@ -75,7 +75,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="NhanViens" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="NhanVien" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#cart"></use>
                         </svg>
@@ -88,7 +88,7 @@
             </h6>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="PhieuMuons" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="PhieuMuon" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#file-earmark"></use>
                         </svg>
@@ -96,7 +96,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="PhieuPhats" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="PhieuPhat" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#file-earmark"></use>
                         </svg>
@@ -117,7 +117,7 @@
                     </a>
                 </li> !-->
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="ThongKeMuons" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="ThongKeMuon" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#cart"></use>
                         </svg>
@@ -139,7 +139,7 @@
             </h6>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="ThongKeSachs" asp-action="Index">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="ThongKeSach" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#file-earmark"></use>
                         </svg>
