--- a/DoAn_Nhom3/LibraryManagement/Views/ThongKeMuon/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/ThongKeMuon/Index.cshtml
@@ -29,7 +29,7 @@
 
     <div class="col-md-3 d-flex align-items-end">
         <button type="submit" class="btn btn-primary me-2">Lọc</button>
-        <a class="btn btn-secondary" href="@Url.Action("Index", "ThongKeMuons")">Reset</a>
+        <a class="btn btn-secondary" href="@Url.Action("Index", "ThongKeMuon")">Reset</a>
     </div>
 </form>
 
