update: fix error when use trigger

--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuPhat/_Form.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuPhat/_Form.cshtml
@@ -6,7 +6,9 @@
 
     <div class="col-md-6">
         <label asp-for="MaPhieuMuon" class="form-label"></label>
-        <select asp-for="MaPhieuMuon" class="form-select"></select>
+        <select asp-for="MaPhieuMuon" sp-items="ViewBag.MaPhieuMuon" class="form-select">
+            <option value="">-- Chọn Phieu Muon --</option>
+        </select>
         <span asp-validation-for="MaPhieuMuon" class="text-danger"></span>
     </div>
 
